<resources>
    <string name="app_name">NhaTro</string>
    <string name="error_network">Network Error</string>
    <string name="error_no_internet">No internet connection. Please check again!</string>
    <string name="error_parse_json">okhttp3.internal.http.RealResponseBody</string>
    <string name="error">Error</string>
    <string name="error_server">Error retrieving information from server</string>
    <string name="error_parse_type"><![CDATA[Value <!DOCTYPE of type]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email">Đăng nhập với Email</string>
    <string name="login_google">Đăng nhập với Google</string>
    <string name="login_facebook">Đăng nhập với Facebook</string>
    <string name="login">Đăng Nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="signup_email">Đăng ký với Email</string>
    <string name="input_email">Nhập email</string>
    <string name="empty_email_password">Vui lòng nhập email và mật khẩu</string>
    <string name="valid_input_email">Vui lòng nhập đúng định dạng Email</string>
    <string name="alert">Thông Báo</string>
    <string name="signup">Đăng ký</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="first_name">Tên</string>
    <string name="last_name">Họ</string>
    <string name="empty_input">Vui lòng nhập đầy đủ thông tin</string>
    <string name="ok">OK</string>
    <string name="home">Trang chủ</string>
    <string name="favorite">Yêu thích</string>
    <string name="post">Đăng tin</string>
    <string name="menu">Menu</string>
    <string name="find_around">Tìm xung quanh</string>
    <string name="price">Price: %s</string>
    <string name="detail_information">Thông tin chi tiết</string>
    <string name="information">Thông tin</string>
    <string name="address">Địa chỉ:</string>
    <string name="square">Diện tích:</string>
    <string name="room_price">Giá phòng:</string>
    <string name="contact">Liên hệ:</string>
    <string name="detail_description">Mô tả chi tiết</string>
    <string name="description">Mô tả:</string>
    <string name="images">Hình ảnh</string>
    <string name="hostels_near_here">Phòng trọ gần đây</string>
    <string name="logout">Đăng xuất</string>
    <string name="security">Bảo mật</string>
    <string name="history">Lịch sử</string>
    <string name="hostel">Phòng trọ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="save">Lưu</string>
    <string name="currency">VND</string>
    <string name="post_button">Đăng</string>
</resources>
