<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/charcoalGrey60"
    android:padding="@dimen/_16dp"
    android:orientation="vertical"
    tools:ignore="MissingPrefix"
    tools:context="com.svs.nhatro.fragment.authentication.LoginEmailFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="@dimen/_20dp"
        android:layout_height="@dimen/_20dp"
        android:src="@drawable/ic_arrow_left" />
    <TextView
        fontPath="@string/font_gothic_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAllCaps="true" />
    <EditText
        android:id="@+id/fragLogEmail_etEmail"
        android:layout_width="match_parent"
        style="@style/editText"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/_16dp"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/fragLogEmail_etPassword"
        android:layout_width="match_parent"
        style="@style/editText"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/_10dp"/>
    <TextView
        android:id="@+id/fragLogEmail_tvLogin"
        android:layout_width="@dimen/_105dp"
        style="@style/button"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/fragLogEmail_tvForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/forgot_password"
        android:gravity="center_horizontal"
        android:textColor="@color/white" />
    <TextView
        android:id="@+id/fragLogEmail_tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/signup_email"
        android:gravity="center_horizontal|bottom"
        android:textColor="@color/white"
        android:layout_weight="1"
        />
</LinearLayout>
