<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical"
    tools:context="com.svs.nhatro.fragment.menu.ChangePassFragment">

    <!-- TODO: Update blank fragment layout -->
    <include layout="@layout/base_actionbar_back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_40dp"
        android:text="@string/new_password" />

    <EditText
        android:id="@+id/fragChangePass_etNewPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_white_border_black_radius"
        android:gravity="center"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColorHint="@color/warmGrey" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/confirm_password" />

    <EditText
        android:id="@+id/fragChangePass_etConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_white_border_black_radius"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="@color/warmGrey" />

    <TextView
        android:id="@+id/fragChangePass_tvSave"
        style="@style/button"
        android:layout_width="@dimen/_105dp"
        android:layout_height="@dimen/_30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/save" />
</LinearLayout>
